# django_basics_learning

./: README.md  pyproject.toml
mysite/: settings.py
