[project]
name = "django-basics-learning"
version = "0.1.0"
description = "Learning the basics of django from official page tutorial"
authors = [
    {name = "SudhakarSivamani",email = "sudhakarsivamani8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
